Fixed sizing of console (no longer causes jumping)

--- a/main.css
+++ b/main.css
@@ -2,14 +2,23 @@
 .heading {
     font-size: 4em;
     color: #333;
-    height: 33vh;
+    /* height: 33vh; */
     display: flex;
+    position: relative;
     align-items: center;
     justify-content: center;
 }
 
-#text {
+#text, #sizer {
     max-width: 80vh;
+}
+
+#text {
+    position: absolute;
+}
+
+#sizer {
+    visibility: hidden;
 }
 
 .terminal-underscore {
